# RoboMaster2020-OnePointFive

./: .gitignore  README.md
AutoLabel/: .gitignore  README.md  使用说明.md
AutoLabel/CenterNet_File/CenterNet_CK/: README.md
AutoLabel/CenterNet_File/CenterNet_CK/src/: main.py
AutoLabel/CenterNet_File/CenterNet_CK/src/lib/: opts.py
AutoLabel/TEST1/aug/image_annotations/: 68.txt  69.txt  70.txt  71.txt  72.txt  73.txt  74.txt  75.txt  76.txt  77.txt  78.txt  79.txt  80.txt  81.txt  82.txt  83.txt  84.txt  85.txt  86.txt  87.txt  88.txt  89.txt  90.txt  91.txt  92.txt  93.txt  94.txt  95.txt  96.txt
AutoLabel/TEST1/dataset/image_annotations/: 18.txt  19.txt  20.txt  21.txt  22.txt  24.txt  25.txt
AutoLabel/code/lib/: Annotation.py  AutoLabel.puml  DataAugment.py  DataProcesser.py  GUI.py  show_results.py  tools.py
AutoLabel/code/lib/CenterNet/: Center_DetectClass.py
AutoLabel/code/lib/CenterNet/lib_oneclass/: opts.py
AutoLabel/code/lib/YOLO/: YOLO_DetectClass.py  YOLO_DetectClass_useless.py  yolo_models.py
AutoLabel/doc/: detail.md
AutoLabel/doc/RM小地图(不用文档)/: RM小地图技术实现.md  ZED.md  小地图方案思路.md
AutoLabel/doc/RM小地图(不用文档)/picture/: 20180606164516310  20180606165427606-1576478924210
ToStation/: ClassGraph.puml  Detect.py  Message.py  Move.py  README.md  tools.py
ToStation/doc/: detail.md
Tools/: README.md
Tools/HitRotate/CPP_OpenVINO/: CMakeLists.txt
Tools/HitRotate/CPP_OpenVINO/src/: main.cpp
Tools/HitRotate/MyNetwork/code/: build_network.py  forward.py  learnany.py  my_dataset.py  my_network.py  my_opt.py  my_tools.py
(+11 files in other folders)
